--- a/School-Portal/src/app/app.component.html
+++ b/School-Portal/src/app/app.component.html
@@ -1,27 +1,33 @@
 @if (isLoggedIn == 'true') {
-    <mat-drawer-container class="drawer-container" autosize>
-        <mat-drawer #drawer class="drawer" mode="side">
-          <p>Auto-resizing sidenav</p>
-        </mat-drawer>
-    
-        <mat-toolbar>
-            <button mat-icon-button (click)="drawer.toggle()">
-              <mat-icon>menu</mat-icon>
-            </button>
-            <span>{{title}}</span>
-            <span class="spacer"></span>
-            <button mat-icon-button>
-              <mat-icon>favorite</mat-icon>
-            </button>
-            <button mat-icon-button>
-              <mat-icon>share</mat-icon>
-            </button>
-        </mat-toolbar>
-        <main>
-            Hi! You are logged in as {{name}}
-        </main>
-      </mat-drawer-container>   
+<mat-drawer-container class="drawer-container" autosize [hasBackdrop]="true">
+  <mat-drawer #drawer class="drawer" mode="side">
+    <div class="drawer-content">
+      <mat-nav-list>
+        <a mat-list-item>Learn</a>
+      </mat-nav-list>
+    </div>
+  </mat-drawer>
+  <mat-toolbar>
+    <button mat-icon-button (click)="drawer.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span style="margin-left: 8px;">{{title}}</span>
+    <span class="spacer"></span>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="logout()">
+        <mat-icon>logout</mat-icon>
+        <span>Logout</span>
+      </button>
+    </mat-menu>
+  </mat-toolbar>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</mat-drawer-container>
 }
 @else {
-    <app-login></app-login>
+<app-login></app-login>
 }
