--- a/School-Portal/src/app/app.component.scss
+++ b/School-Portal/src/app/app.component.scss
@@ -7,17 +7,14 @@ mat-toolbar {
 }
 
 .drawer-container {
-    width: 100%;
-    height: 100%;
-}
-
-.drawer-content {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
+    width: 100dvw;
+    height: 100dvh;
 }
 
 .drawer {
     padding: 20px;
+}
+
+.mat-drawer-backdrop {
+    position: fixed;
 }
