try to add ebooks to the portal

--- a/School-Portal/src/app/app.component.html
+++ b/School-Portal/src/app/app.component.html
@@ -3,7 +3,7 @@
   <mat-drawer #drawer class="drawer" mode="side">
     <div class="drawer-content">
       <mat-nav-list>
-        <a mat-list-item>Learn</a>
+        <a mat-list-item href="/learn">Learn</a>
       </mat-nav-list>
     </div>
   </mat-drawer>
