--- a/hammingcode/src/app/app.component.css
+++ b/hammingcode/src/app/app.component.css
@@ -1,3 +1,29 @@
+h1 {
+    color: #ffffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2.5em;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footnote {
+    color: #ffffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1em;
+    text-align: center;
+    margin-top: 20px;
+    a {
+        color: #ffffff;
+        &:visited {
+            color: #ffffff;
+        }
+    }
+}
+
+.grid-container {
+    display: flex;
+    justify-content: center;
+}
 .bits-grid {
     background-color: rgb(50 50 50);
     display: grid;
@@ -7,10 +33,13 @@
     padding: 16px;
     margin: 10px;
     border-radius: 16px;
-    /* border: 1px solid black; */
     box-shadow: 0 0 10px #222222;
     width: fit-content;
     height: auto;
+    /* position: absolute; */
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
 }
 
 .bit {
@@ -20,13 +49,29 @@
     color: rgb(255, 255, 255);
     border: 1px solid black;
     border-radius: 6px;
-    /* box-shadow: 0 0 5px black; */
     transition: background-color 0.3s, border-radius 0.3s, transform 0.3s;
-    .bit-value {
+    position: relative;
+
+    p{
         font-size: 24px;
         text-align: center;
         margin-top: 10px;
+        position: absolute;
     };
+    input {
+        height: 62px;
+        width: 62px;
+        background: transparent;
+        border: none;
+        caret-color: white;
+        color: white;
+        font-family: Roboto, "Helvetica Neue", sans-serif;
+        font-size: 24px;
+        text-align: center;
+        &:focus {
+            outline: none;
+        }
+    }
     .bit-number {
         font-size: 16px;
         text-align: left;
@@ -35,9 +80,33 @@
     }
 }
 
-.bit:hover {
+.bit:not(.parity):hover {
     background-color: rgb(69, 69, 69);
     border-radius: 12px;
     transform: scale(1.1);
     transition: background-color 0.3s, border-radius 0.3s, transform 0.3s;
+}
+
+.parity {
+    background-color: rgb(191 191 191);
+    color: rgb(26 26 26);
+    border: 1px solid black;
+    border-radius: 6px;
+}
+
+button {
+    background-color: #222222;
+    color: #dfdfdf;
+    border: none;
+    border-radius: 12px;
+    padding: 10px 20px;
+    margin: 8px;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    cursor: pointer;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
 }
