--- a/hammingcode/src/app/app.component.css
+++ b/hammingcode/src/app/app.component.css
@@ -1,8 +1,11 @@
-h1 {
+h1,
+h3 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 2.5em;
     text-align: center;
-    margin-top: 20px;
+}
+
+h1 {
+    font-size: 2.5em;
 }
 
 .footnote {
@@ -10,6 +13,7 @@ h1 {
     font-size: 1em;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
     a {
         color: #ffffff;
         &:visited {
