--- a/hammingcode/src/app/app.component.html
+++ b/hammingcode/src/app/app.component.html
@@ -2,19 +2,23 @@
   Hamming Code Visualizer
 </h1>
 
+<h3>
+  Start filling in the data bits and see it generate the parity bits!
+</h3>
+
 <div class="grid-container">
   <div class="bits-grid">
     <span class="bit parity">
       <p class="bit-number">0</p>
-      <p class="bit-value" id="value0"></p>
+      <input disabled class="bit-value" id="value0">
     </span>
     <span class="bit parity">
       <p class="bit-number">1</p>
-      <p class="bit-value" id="value1"></p>
+      <input disabled class="bit-value" id="value1">
     </span>
-    <span class="bit">
+    <span class="bit parity">
       <p class="bit-number">2</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value2">
+      <input disabled class="bit-value" id="value2">
     </span>
     <span class="bit">
       <p class="bit-number">3</p>
@@ -22,7 +26,7 @@
     </span>
     <span class="bit parity">
       <p class="bit-number">4</p>
-      <p class="bit-value" id="value4"></p>
+      <input disabled class="bit-value" id="value4">
     </span>
     <span class="bit">
       <p class="bit-number">5</p>
@@ -38,7 +42,7 @@
     </span>
     <span class="bit parity">
       <p class="bit-number">8</p>
-      <p class="bit-value" id="value8"></p>
+      <input disabled class="bit-value" id="value8">
     </span>
     <span class="bit">
       <p class="bit-number">9</p>
@@ -73,36 +77,37 @@
 
 <div class="flex">
   <p>
-    The actual data bits:
+    Actual data:
     <span id="databits"></span>
   </p>
+  <div class="flex-break"></div>
   <p>
-    The parity bits:
-    <span id="paritybits"></span>
+    Data with parity bits at positions 0, 2, 4, and 8:
+    <span id="result"></span>
   </p>
+  <p id="check-verdict"></p>
 </div>
 
 <div class="flex">
-  <button id="generate-button">
+  <button id="generate-button" (click)="generateParityBits()">
     <mat-icon class="button-icon">autorenew</mat-icon>
     <label class="button-label">Generate</label>
   </button>
   <div class="flex-break"></div>
   <span id="steps">
-    <h2>Steps to store 10 bits with partiy:</h2>
+    <h2>Steps to store 11 bits using Extended Hamming Code:</h2>
     <ol>
-      <li>Store the data in the bits whose position is not a power of 2 (i.e. bits 3, 5, 6, 7, 9, 10, 11, 12, 13, 14).</li>
-      <li>Calculate the parity bits for the positions 1, 2, 4, and 8</li>
-      <li>Store the parity bits in the positions 1, 2, 4, and 8.</li>
+      <li>Store the data in the bits whose position is not a power of 2 (i.e. bits 1, 3, 5, 6, 7, 9, 10, 11, 12, 13, 14).</li>
+      <li>Calculate the parity of the bits </li>
     </ol>
   </span>
   <div class="flex-break"></div>
   <div class="button-grid">
-    <button>
+    <button (click)="checkData()">
       <mat-icon class="button-icon">check</mat-icon>
       <label class="button-label">Check</label>
     </button>
-    <button>
+    <button (click)="reset()">
       <mat-icon class="button-icon">restart_alt</mat-icon>
       <label class="button-label">Reset</label>
     </button>
@@ -110,6 +115,7 @@
 </div>
 
 <p class="footnote">
-  Made by Kavish by the help of <a href="https://www.youtube.com/watch?v=X8jsijhllIA">this amazing video</a> by
-  3Blue1Brown.
+  © 2024 - Kavish Devar
+  <br>
+  Made with the help of <a href="https://www.youtube.com/watch?v=X8jsijhllIA">this amazing video</a> by 3Blue1Brown.
 </p>
