--- a/hammingcode/src/app/app.component.html
+++ b/hammingcode/src/app/app.component.html
@@ -10,81 +10,78 @@
   <div class="bits-grid">
     <span class="bit parity">
       <p class="bit-number">0</p>
-      <input disabled class="bit-value" id="value0">
+      <input disabled class="bit-value" id="value0" value="0">
     </span>
     <span class="bit parity">
       <p class="bit-number">1</p>
-      <input disabled class="bit-value" id="value1">
+      <input disabled class="bit-value" id="value1" value="0">
     </span>
     <span class="bit parity">
       <p class="bit-number">2</p>
-      <input disabled class="bit-value" id="value2">
+      <input disabled class="bit-value" id="value2" value="0">
     </span>
     <span class="bit">
       <p class="bit-number">3</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value3">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value3">
     </span>
     <span class="bit parity">
       <p class="bit-number">4</p>
-      <input disabled class="bit-value" id="value4">
+      <input disabled class="bit-value" id="value4" value="0">
     </span>
     <span class="bit">
       <p class="bit-number">5</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value5">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value5">
     </span>
     <span class="bit">
       <p class="bit-number">6</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value6">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value6">
     </span>
     <span class="bit">
       <p class="bit-number">7</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value7">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value7">
     </span>
     <span class="bit parity">
       <p class="bit-number">8</p>
-      <input disabled class="bit-value" id="value8">
+      <input disabled class="bit-value" id="value8" value="0">
     </span>
     <span class="bit">
       <p class="bit-number">9</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value9">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value9">
     </span>
     <span class="bit">
       <p class="bit-number">10</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value10">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value10">
     </span>
     <span class="bit">
       <p class="bit-number">11</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value11">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value11">
     </span>
     <span class="bit">
       <p class="bit-number">12</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value12">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value12">
     </span>
     <span class="bit">
       <p class="bit-number">13</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value13">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value13">
     </span>
     <span class="bit">
       <p class="bit-number">14</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value14">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value14">
     </span>
     <span class="bit">
       <p class="bit-number">15</p>
-      <input pattern="[0-1]{1}" autocomplete="off" maxlength="1" class="bit-value" id="value15">
+      <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value15">
     </span>
   </div>
 </div>
 
 <div class="flex">
-  <p>
-    Actual data:
-    <span id="databits"></span>
-  </p>
   <div class="flex-break"></div>
   <p>
-    Data with parity bits at positions 0, 2, 4, and 8:
+    Data with parity bits at positions 0, 1, 2, 4, and 8:<br>
     <span id="result"></span>
   </p>
+  <div class="flex-break"></div>
   <p id="check-verdict"></p>
 </div>
 
@@ -94,13 +91,13 @@
     <label class="button-label">Generate</label>
   </button>
   <div class="flex-break"></div>
-  <span id="steps">
+  <!-- <span id="steps">
     <h2>Steps to store 11 bits using Extended Hamming Code:</h2>
     <ol>
       <li>Store the data in the bits whose position is not a power of 2 (i.e. bits 1, 3, 5, 6, 7, 9, 10, 11, 12, 13, 14).</li>
       <li>Calculate the parity of the bits </li>
     </ol>
-  </span>
+  </span> -->
   <div class="flex-break"></div>
   <div class="button-grid">
     <button (click)="checkData()">
