ability to find errorbit

--- a/hammingcode/src/app/app.component.html
+++ b/hammingcode/src/app/app.component.html
@@ -77,12 +77,9 @@
 
 <div class="flex">
   <div class="flex-break"></div>
-  <p>
-    Data with parity bits at positions 0, 1, 2, 4, and 8:<br>
-    <span id="result"></span>
-  </p>
+  <span id="result"></span>
   <div class="flex-break"></div>
-  <p id="check-verdict"></p>
+  <span id="check-verdict"></span>
 </div>
 
 <div class="flex">
@@ -114,5 +111,7 @@
 <p class="footnote">
   © 2024 - Kavish Devar
   <br>
-  Made with the help of <a href="https://www.youtube.com/watch?v=X8jsijhllIA">this amazing video</a> by 3Blue1Brown.
+  Made with the help of these 2 videos by the great Grant Sanderson (3Blue1Brown).
+  <a href="https://www.youtube.com/watch?v=X8jsijhllIA">Hamming Codes Part 1</a>
+  <a href="https://www.youtube.com/watch?v=b3NxrZOu_CE">Hamming Codes Part 2</a>
 </p>
