--- a/hammingcode/src/app/app.component.html
+++ b/hammingcode/src/app/app.component.html
@@ -2,73 +2,69 @@
   Hamming Code Visualizer
 </h1>
 
-<h3>
-  Start filling in the data bits and see it generate the parity bits!
-</h3>
-
 <div class="grid-container">
   <div class="bits-grid">
-    <span class="bit parity">
+    <span class="bit parity" id="span0">
       <p class="bit-number">0</p>
       <input disabled class="bit-value" id="value0" value="0">
     </span>
-    <span class="bit parity">
+    <span class="bit parity" id="span1">
       <p class="bit-number">1</p>
       <input disabled class="bit-value" id="value1" value="0">
     </span>
-    <span class="bit parity">
+    <span class="bit parity parity2" id="span2">
       <p class="bit-number">2</p>
       <input disabled class="bit-value" id="value2" value="0">
     </span>
-    <span class="bit">
+    <span class="bit parity1 parity2" id="span3">
       <p class="bit-number">3</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value3">
     </span>
-    <span class="bit parity">
+    <span class="bit parity parity4" id="span4">
       <p class="bit-number">4</p>
       <input disabled class="bit-value" id="value4" value="0">
     </span>
-    <span class="bit">
+    <span class="bit parity1 parity4" id="span5">
       <p class="bit-number">5</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value5">
     </span>
-    <span class="bit">
+    <span class="bit parity2 parity4" id="span6">
       <p class="bit-number">6</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value6">
     </span>
-    <span class="bit">
+    <span class="bit parity1 parity2 parity4" id="span7">
       <p class="bit-number">7</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value7">
     </span>
-    <span class="bit parity">
+    <span class="bit parity parity8" id="span8">
       <p class="bit-number">8</p>
       <input disabled class="bit-value" id="value8" value="0">
     </span>
-    <span class="bit">
+    <span class="bit parity1 parity8" id="span9">
       <p class="bit-number">9</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value9">
     </span>
-    <span class="bit">
+    <span class="bit parity2 parity8" id="span10">
       <p class="bit-number">10</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value10">
     </span>
-    <span class="bit">
+    <span class="bit parity1 parity2 parity8" id="span11">
       <p class="bit-number">11</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value11">
     </span>
-    <span class="bit">
+    <span class="bit parity4 parity8" id="span12">
       <p class="bit-number">12</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value12">
     </span>
-    <span class="bit">
+    <span class="bit parity1 parity4 parity8" id="span13">
       <p class="bit-number">13</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value13">
     </span>
-    <span class="bit">
+    <span class="bit parity2 parity4 parity8" id="span14">
       <p class="bit-number">14</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value14">
     </span>
-    <span class="bit">
+    <span class="bit parity1 parity2 parity4 parity8" id="span15">
       <p class="bit-number">15</p>
       <input type="number" value="0" min="0" max="1" autocomplete="off" class="bit-value" id="value15">
     </span>
