--- a/hammingcode/src/app/app.component.css
+++ b/hammingcode/src/app/app.component.css
@@ -30,15 +30,15 @@ h1 {
 }
 
 .bits-grid {
-    background-color: rgb(50 50 50);
+    background-color: rgb(23 23 23);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    grid-gap: 4px;
+    grid-gap: 8px;
     padding: 16px;
     margin: 10px;
     border-radius: 16px;
-    box-shadow: 0 0 10px #222222;
+    box-shadow: inset 5px 7px 18px 7px #6d6d6d;
     width: fit-content;
     height: auto;
 }
@@ -46,8 +46,7 @@ h1 {
 .bit {
     width: 64px;
     height: 64px;
-    background-color: rgb(105, 105, 105);
-    border: 1px solid black;
+    background-color: rgb(42 42 42);
     border-radius: 6px;
     transition: background-color 0.3s, border-radius 0.3s, transform 0.3s;
     position: relative;
@@ -97,15 +96,16 @@ h1 {
 }
 
 .parity {
-    background-color: rgb(191 191 191);
-    color: rgb(26 26 26);
-    border: 1px solid black;
+    background-color: rgb(91 91 91);
+    color: rgb(255 255 255);
     border-radius: 6px;
 
     input {
-        color: rgb(26 26 26);
+        color: rgb(255, 255, 255);
     }
 }
+
+
 
 button {
     background-color: #222222;
@@ -166,4 +166,12 @@ button {
     display: block;
     margin: auto;
     max-width: 800px;
+}
+
+
+#value1:hover + #value1 + #value3 + #value5 + #value7 + #value9 + #value11 + #value13 + #value15 {
+    background-color: rgb(69, 69, 69);
+    border-radius: 12px;
+    transform: scale(1.1);
+    transition: background-color 0.3s, border-radius 0.3s, transform 0.3s;
 }
